Admin/Meber created and private route in process

--- a/package.json
+++ b/package.json
@@ -33,5 +33,17 @@
   },
   "devDependencies": {
     "redux-devtools": "^3.5.0"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Damini25/ReactFirst.git"
+  },
+  "author": "damini",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Damini25/ReactFirst/issues"
+  },
+  "homepage": "https://github.com/Damini25/ReactFirst#readme"
 }
