--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "chart.js": "^2.8.0",
+    "chartist": "^0.11.3",
     "enzyme-adapter-react-16": "^1.14.0",
     "react": "^16.8.6",
+    "react-chartist": "^0.13.3",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
